# SizeBench

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
EndUserDocs/: binary-section.html  coff-group.html  compiland.html  diff.html  duplicate-data.html  dynamic-initializers.html  exceptions.html  index.html  single-binary.html  styles.css  template-foldability.html  type-layout.html  wasteful-virtuals.html
docs/: Analysis Engine internals.md  Contributing.md  Opening a Session.md  Principles.md  Size VirtualSize and RVAs.md  Solution Architecture.md  Test Strategy.md
src/: Directory.Build.props  Directory.Build.targets  Directory.Packages.props  ExcludeSlowTests.playlist  NuGet.config  RunSettings.runsettings  SizeBench.sln  global.json
src/BinaryBytes/: ApplicationDbHandler.cs  BinaryBytes.csproj  BinaryBytes.nuspec  BinaryBytes.props  BytesItem.cs  CommandLineArgs.cs  Constants.cs  GlobalSuppressions.cs  Program.cs  SectionBytes.cs  SymbolContributor.cs  Utilities.cs
src/SizeBench.AnalysisEngine.RealPETests/: GlobalSuppressions.cs  SizeBench.AnalysisEngine.RealPETests.csproj  TestingTheTests.cs
src/SizeBench.AnalysisEngine.Tests/: GlobalSuppressions.cs  SessionDataCacheTests.cs  SessionTaskProgressTests.cs  SizeBench.AnalysisEngine.Tests.csproj  TestingTheTests.cs  (+1 more)
src/TestPEProjects/SizeBenchV2.AnalysisEngine.Tests.Rust/: Cargo.toml
src/TestPEProjects/SizeBenchV2.AnalysisEngine.Tests.Rust/src/: enum_with_methods.rs  lib.rs
(+932 files in other folders)
