[package]
name = "sizebenchv2_analysisengine_tests_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]
bench = false
test = false

[profile.dev]
opt-level=0
incremental=false

[profile.release]
opt-level=0
incremental=false
debug=2